[gd_scene load_steps=12 format=3 uid="uid://ypaqjflcdklt"]

[ext_resource type="Script" path="res://Main/Enemies/Gunner/enemy.gd" id="1_jwliv"]
[ext_resource type="Resource" uid="uid://c22rp8pcunmij" path="res://Main/Pickups/Abilities/AbilityResources/InstantHealing.tres" id="2_3am78"]
[ext_resource type="ArrayMesh" uid="uid://bti3a3k88xeno" path="res://Assets/SpaceshipT2/Lo_poly_Spaceship_04_by_Liz_Reddington.obj" id="2_flp06"]
[ext_resource type="Script" path="res://Main/Pickups/Abilities/AbilityDescriptor.gd" id="3_1mwpf"]
[ext_resource type="AudioStream" uid="uid://tjnhntclvkob" path="res://Assets/Sounds/laserShoot.wav" id="3_wv1mu"]
[ext_resource type="Resource" uid="uid://blv5n282tva3g" path="res://Main/Pickups/Abilities/AbilityResources/EMP.tres" id="4_tvfki"]

[sub_resource type="Resource" id="Resource_ekbif"]
script = ExtResource("3_1mwpf")
ability = ExtResource("2_3am78")
weight = 25.0

[sub_resource type="Resource" id="Resource_efa0r"]
script = ExtResource("3_1mwpf")
ability = ExtResource("4_tvfki")
weight = 25.0

[sub_resource type="BoxShape3D" id="BoxShape3D_0500u"]
size = Vector3(6.50684, 7.47168, 21.082)

[sub_resource type="BoxShape3D" id="BoxShape3D_6n7wn"]
size = Vector3(4.943, 12.7183, 9.727)

[sub_resource type="BoxShape3D" id="BoxShape3D_otdal"]
size = Vector3(4.943, 12.7183, 9.727)

[node name="Enemy" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_jwliv")
droppableAbilities = Array[ExtResource("3_1mwpf")]([SubResource("Resource_ekbif"), SubResource("Resource_efa0r")])

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 0)
mesh = ExtResource("2_flp06")

[node name="MainBody" type="CollisionShape3D" parent="." groups=["EnemyBody", "MainBody"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.67306, 0)
shape = SubResource("BoxShape3D_0500u")

[node name="RightWing" type="CollisionShape3D" parent="." groups=["EnemyBody", "RightWing"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.8496, 1.35913, -2.16328)
shape = SubResource("BoxShape3D_6n7wn")

[node name="LeftWing" type="CollisionShape3D" parent="." groups=["EnemyBody", "LeftWing"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.85, 1.359, -2.163)
shape = SubResource("BoxShape3D_otdal")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6, 0)
omni_range = 22.523
omni_attenuation = 0.00153239

[node name="OmniLight3D" type="OmniLight3D" parent="OmniLight3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -13, 0)
light_energy = 15.384
omni_range = 22.523
omni_attenuation = 0.00153239

[node name="RightFrontGun" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.43555, 0.580084, 8)

[node name="RightBackGun" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.47109, 2.16994, 5.77334)

[node name="LeftBackGun" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.471, 2.17, 5.773)

[node name="LeftFrontGun" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.436, 0.58, 8)

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_wv1mu")
volume_db = -24.615
max_db = -24.0

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 11, 0)
modulate = Color(1, 0, 0, 1)
text = "100 HP"
font_size = 1024
outline_size = 64
uppercase = true

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="."]

[connection signal="screen_entered" from="VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_exited"]
